# bbbbbbbbbbb

./: .replit  Cargo.toml  LOCAL_SETUP.md  README.md  dfx.json  package-lock.json  package.json  replit.md  setup-local.bat  setup-local.sh
attached_assets/: Pasted-Product-Requirements-Document-PRD-Shaikh-Mohmmad-Fezan-Hanif-June-2025-Project-Title-Blockchai-1751275571425_1751275571426.txt
client/src/: App.tsx  index.css
client/src/components/: AIRecommendations.tsx  ErrorBoundary.tsx  ICPProvider.tsx  ICPWalletProvider.tsx  Navbar.tsx  PropertyCard.tsx  SupabaseAuthProvider.tsx  SupabaseRealTime.tsx  ThemeProvider.tsx  WalletConnectModal.tsx  WalletProvider.tsx
client/src/components/charts/: AssetAllocationChart.tsx  PortfolioChart.tsx
client/src/lib/: env.ts  icp-client.ts  icpClient.ts  icpQueryClient.ts  mock-icp-client.ts  mockData.ts  supabase.ts
client/src/pages/: Dashboard.tsx  Governance.tsx  Home.tsx  ICPMarketplace.tsx  Marketplace.tsx  Portfolio.tsx  PortfolioFixed.tsx  Recommendations.tsx
scripts/: deploy-icp.sh
server/: ai-recommendations.ts  db.ts  index.ts  routes.ts  seed.ts  storage.ts  supabase-storage.ts  supabase.ts
shared/: schema.ts
src/governance_canister/: Cargo.toml
src/governance_canister/src/: lib.rs
src/investment_canister/: Cargo.toml
src/investment_canister/src/: lib.rs
src/property_canister/: Cargo.toml
src/property_canister/src/: lib.rs
src/user_canister/: Cargo.toml
src/user_canister/src/: lib.rs
